--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@
 .obsidian/plugins/make-md/Spaces.mdb
 .obsidian/plugins/make-md/data.json
 .obsidian/workspace.json
+
+
+
+
+# Ignore Smart Connections folder
+.smart-connections
+.obsidian/community-plugins.json
+.obsidian/plugins/make-md/Spaces.mdb
+.makemd/fileCache.mdc
+.makemd/superstate.mdc
